--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ FTCoreText.xcodeproj/xcuserdata/baldophpourprix.xcuserdatad/xcschemes/xcschemema
 FTCoreText.xcodeproj/xcuserdata/baldophpourprix.xcuserdatad/xcschemes/FTCoreText.xcscheme
 
 FTCoreText.xcodeproj/project.xcworkspace/xcuserdata/baldophpourprix.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
