adding link support + image support
Signed-off-by: Francesco Freezone <cescofry@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Calpol.xcodeproj/project.xcworkspace/xcuserdata/baldophpourprix.xcuserdatad/User
 /.DS_Store
 /Calpol/.DS_Store
 Calpol/CPSectionView.m
+
+/FTCoreText.xcodeproj/project.xcworkspace/xcuserdata/fuerteinternational.xcuserdatad/UserInterfaceState.xcuserstate
