--- a/.gitignore
+++ b/.gitignore
@@ -8,19 +8,14 @@
 
 xcuserdata
 
-PLBlocks.framework/*
 build/*
 
 .DS_Store
 profile
 .svn
 
-Calpol.xcodeproj/project.xcworkspace/xcuserdata/baldophpourprix.xcuserdatad/UserInterfaceState.xcuserstate
-
-Calpol.xcodeproj/project.xcworkspace/xcuserdata/baldophpourprix.xcuserdatad/UserInterfaceState.xcuserstate
 
 /.DS_Store
-/Calpol/.DS_Store
-Calpol/CPSectionView.m
 
 /FTCoreText.xcodeproj/project.xcworkspace/xcuserdata/fuerteinternational.xcuserdatad/UserInterfaceState.xcuserstate
+FTCTExample/FTCTExample.xcodeproj/project.xcworkspace/xcshareddata/FTCTExample.xccheckout
